fix(layout): Fix IE align-items: center issue.
In Internet Explorer 10/11, flex items inside of a flex column container
that had `align-items: center;` set would not properly calculate their
width, resulting in 0-width items.

Fix by setting `max-width: 100%` and `box-sizing: border-box` on the
child elements, and fixing the demos to properly use `layout-fill`
where appropriate.

Also fix issue checkbox demo issue with flex fieldsets not properly
rendering in IE.

Closes #5089.

--- a/src/core/services/layout/layout.scss
+++ b/src/core/services/layout/layout.scss
@@ -282,7 +282,17 @@
   {
     align-items: center;
     max-width: 100%;
+  }
 
+  // Cross Axis Center IE overflow fix
+  .#{$name}-center-center > *,
+  .#{$name}-start-center > *,
+  .#{$name}-end-center > *,
+  .#{$name}-space-between-center > *,
+  .#{$name}-space-around-center > *,
+  {
+    max-width: 100%;
+    box-sizing: border-box;
   }
 
   // Cross Axis End
